...
                    }
                }
                .navigationBarTitle(self.store.name)
                .navigationBarItems(leading: Button(action: {
                    self.store.addDocument()
                }, label: {
                    Image(systemName: "plus").imageScale(.large)
                }),
                trailing:
                    HStack {
                    
                        Button(action: {
                            self.showGridView = false
...
